fix tag overlap

--- a/frontend/src/modules/detailsPage/styles.scss
+++ b/frontend/src/modules/detailsPage/styles.scss
@@ -1040,7 +1040,7 @@
           }
           li {
             font-size: 1.4rem;
-            margin-bottom: 0px;
+            margin-bottom: 10px;
             @-moz-document url-prefix() {
               font-size: 12px !important;
             }
